updated table with correct spacing
git-svn-id: svn://107.170.10.188:8080/Semoss/trunk@3370 ef391c1c-ee15-45f7-b1d6-dde3d27a2169

Former-commit-id: 0835965561cb6ac124b9a64de36f24bb7070ed64

--- a/html/MHS-RDFSemossCharts/app/css/network-timeline.css
+++ b/html/MHS-RDFSemossCharts/app/css/network-timeline.css
@@ -121,11 +121,6 @@ body {
     position: absolute;
     text-align: center;
 }
-
-table tbody tr td {
-    height: 20px;
-}
-  
   /* Style northward tooltips differently */
 .d3-tip.n:after {
     margin: -1px 0 0 0;
@@ -144,3 +139,42 @@ table tbody tr td {
  .ng-table th.text-center {
      text-align: center;
  }
+ .phase {
+    width: 15%;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+     overflow: hidden;
+ }
+ .loe {
+    width: 10%;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+     overflow: hidden;
+ }
+ .icd {
+    width: 30%;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+     overflow: hidden;
+ }
+ 
+ .gl-item {
+    max-width: 30%;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+     overflow: hidden;
+ }
+ 
+ .gl-tag {
+    width: 15%;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+     overflow: hidden;
+ }
+ 
+
+.fixed-layout {
+    table-layout: fixed;
+}
+
+ 
